# WeTextProcessing2java

./: .gitignore
itn/: zh_itn_tagger.fst
itn/chinese/data/default/: whitelist.tsv
itn/chinese/data/measure/: units_en.tsv  units_zh.tsv
itn/chinese/data/number/: sign.tsv
runtime/: CMakeLists.txt
runtime/fc_base-AppleClang/gflags-build/: Makefile  cmake_install.cmake  gflags-nonamespace-targets.cmake  gflags-targets.cmake
runtime/fc_base-AppleClang/gflags-subbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
runtime/fc_base-AppleClang/gflags-subbuild/gflags-populate-prefix/tmp/: gflags-populate-mkdirs.cmake
runtime/fc_base-AppleClang/glog-build/: Makefile  cmake_install.cmake  config.h  glog-targets.cmake
runtime/fc_base-AppleClang/glog-subbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
runtime/fc_base-AppleClang/glog-subbuild/glog-populate-prefix/tmp/: glog-populate-mkdirs.cmake
runtime/fc_base-AppleClang/openfst-build/: Makefile  cmake_install.cmake
runtime/fc_base-AppleClang/openfst-build/src/: Makefile  cmake_install.cmake
runtime/fc_base-AppleClang/openfst-build/src/extensions/: Makefile  cmake_install.cmake
runtime/fc_base-AppleClang/openfst-build/src/lib/: Makefile  cmake_install.cmake
runtime/fc_base-AppleClang/openfst-subbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
runtime/fc_base-AppleClang/openfst-subbuild/openfst-populate-prefix/tmp/: openfst-populate-mkdirs.cmake
runtime/java/: CMakeLists.txt  README.md  build.sh
runtime/java/src/main/cpp/: wetext_jni.cc
runtime/java/src/main/java/com/wetext/: Example.java  WetextProcessor.java
tn/: zh_tn_tagger.fst  zh_tn_verbalizer.fst
(+10 files in other folders)
